--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ pycodestyle==2.6.0
 pycparser==2.20
 python-dotenv==0.15.0
 pytz==2020.4
-psycopg==2.5.0
+psycopg2==2.5.0
 toml==0.10.2
 typing-extensions==3.7.4.3
 ujson==4.0.1
